--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "cookie-parser": "^1.4.3",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "lodash": "^4.17.4",
     "moment": "^2.20.1",
+    "moment-timezone": "^0.5.14",
     "pino": "^4.7.3",
     "request-promise-native": "1.0.5",
     "source-map-support": "^0.4.15",
